# mitranesia-dashboard-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  migration.sql  postman_collection.json  pyproject.toml
.github/scripts/: tune-fail2ban.sh
.github/workflows/: admin-tune.yml  deploy.yml  test.yml
.triggers/: fail2ban-tune
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_client_public_features.py  0003_carousel_items.py  0004_image_base64_assets.py  0005_merchant_official_partner.py  0006_merchant_images.py  0007_fts_indexes.py  0008_soft_delete.py  0009_newsletter.py  0010_merchant_reviews.py
app/: main.py
app/api/: routes_admin_users.py  routes_auth.py  routes_carousels.py  routes_client.py  routes_client_auth.py  routes_client_leads.py  routes_dashboard.py  routes_dashboard_reviews.py  routes_insights.py  routes_merchants.py  routes_newsletter.py  routes_sitemap.py
app/core/: config.py  rate_limit.py  security.py
app/db/: session.py
app/dependencies/: auth.py  client_auth.py
app/models/: __init__.py  admin_user.py  carousel_item.py  client_merchant_application.py  client_merchant_inquiry.py  client_user.py  insight_article.py  (+6 more)
mitra_revamp_dashboard_be.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: import_insights_from_frontend.py  import_merchants_from_frontend.py  migrate_base64_to_disk.py
tests/: conftest.py  test_auth.py  test_authorization.py  test_carousels.py  test_client_api.py  test_client_auth_and_leads.py  test_dashboard.py  test_insights.py  test_merchants.py
(+17 files in other folders)
