[project]
name = "mitra-revamp-dashboard-be"
version = "0.1.0"
description = "Superadmin dashboard backend for Mitranesia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "email-validator>=2.0.0",
  "fastapi>=0.116.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "pyjwt>=2.10.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.alembic]
script_location = "alembic"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
